--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <main>
-    <img id="ImageFrontPage" class="ImageFrontPage" src="images/ImageFrontPage.jpeg" alt="picture of the Hotel year nineteen hundred and five" width="2000" height="400">
+    <img id="ImageFrontPage" class="ImageFrontPage" src="images/ImageFrontPage.jpeg" alt="picture of the hotel backyard" width="2000" height="400">
     <h1> World's Finest Hotel </h1>
 
     <section class=subtitles>
