--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="mySlides fade">
         <div class="numbertext">6 / 6</div>
-        <img src="images/roomsingle.png" style="width:100%" alt="Luxury room for one">
+        <img src="images/roomsingle.jpg" style="width:100%" alt="Luxury room for one">
         <div class="text"></div>
       </div>
 
